# hello-kafka

./: .gitignore  README.md  docker-compose.yml
hello-kafka-java/: README.md  settings.gradle.kts
hello-kafka-java/consumer/: build.gradle.kts
hello-kafka-java/consumer/src/main/java/com/example/hello_kafka_java/: HelloKafkaJavaConsumerApplication.java
hello-kafka-java/consumer/src/main/resources/: application.properties
hello-kafka-java/consumer/src/test/java/com/example/hello_kafka_java/: HelloKafkaJavaConsumerApplicationTests.java
hello-kafka-java/producer/: build.gradle.kts
hello-kafka-java/producer/src/main/java/com/example/hello_kafka_java/: HelloKafkaJavaProducerApplication.java
hello-kafka-java/producer/src/main/java/com/example/hello_kafka_java/config/: KafkaProducerConfig.java
hello-kafka-java/producer/src/main/java/com/example/hello_kafka_java/controller/: MessageController.java
hello-kafka-java/producer/src/main/resources/: application.properties
hello-kafka-java/producer/src/test/java/com/example/hello_kafka_java/: HelloKafkaJavaProducerApplicationTests.java
hello-kafka-java/src/main/java/com/example/hello_kafka_java/: HelloKafkaJavaApplication.java
hello-kafka-java/src/main/java/com/example/hello_kafka_java/config/: KafkaConsumerConfig.java
hello-kafka-java/src/main/java/com/example/hello_kafka_java/service/: Consumer.java
hello-kafka-java/src/main/resources/: application.properties
hello-kafka-java/src/test/java/com/example/hello_kafka_java/: HelloKafkaJavaApplicationTests.java
hello-kafka-python/: README.md  pyproject.toml
hello-kafka-python/src/consumer/: __init__.py  __main__.py
hello-kafka-python/src/hello_kafka_python/: __init__.py  __main__.py
hello-kafka-python/src/producer/: __init__.py  __main__.py
java/: README.md
python/: README.md
(+1 files in other folders)
