[project]
name = "hello-kafka-python"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Stig B. Dørmænen", email = "stigbd@gmail.com" }]
dependencies = ["kafka-python-ng~=2.2.2"]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"consumer" = "consumer:main"
"producer" = "producer:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = ["pyright~=1.1.381", "pytest~=8.3.3"]

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
all = { chain = ["fmt", "lint", "check"] }
